fpp_analysis/src/test/constant/undef_2.ref.txt
error: undefined symbol
 --> [ local path prefix ]/constant/undef_2.fpp:1:14
  |
1 | constant b = M.a
  |              ^ cannot find constant `M` in scope

